Bug 1414361 - [devtools] Truncate extremely long text nodes in the ruleview r=nchevobbe
Depends on D161494

In this bug, if we fix the original issue, the markupview will start rendering a property value with the base64 for the image, but the text is so long that the markup view becomes unusable both from a UX perspective (node is way too tall) and from a performance perspective (resizing the markupview triggers reflow which freeze the browser for a very long time).

Differential Revision: https://phabricator.services.mozilla.com/D161559

UltraBlame original commit: 27c8db8efbc228cbdd4167255c87cde432cfb1c4

--- a/devtools/client/themes/inspector.css
+++ b/devtools/client/themes/inspector.css
@@ -1,3 +1,61 @@
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+.
+*
+/
 :
 root
 {
@@ -23,6 +81,20 @@ border
 box
 ;
 }
+/
+*
+Make
+sure
+to
+hide
+scroll
+bars
+for
+the
+parent
+window
+*
+/
 window
 {
 overflow
@@ -30,6 +102,16 @@ overflow
 hidden
 ;
 }
+/
+*
+The
+main
+Inspector
+panel
+container
+.
+*
+/
 .
 inspector
 -
@@ -46,6 +128,27 @@ overflow
 hidden
 ;
 }
+/
+*
+The
+main
+panel
+layout
+.
+This
+area
+consists
+of
+a
+toolbar
+markup
+view
+and
+breadcrumbs
+bar
+.
+*
+/
 #
 inspector
 -
@@ -53,6 +156,45 @@ main
 -
 content
 {
+/
+*
+Subtract
+1
+pixel
+from
+the
+panel
+height
+.
+It
+'
+s
+puzzling
+why
+this
+is
+needed
+but
+if
+not
+presented
+the
+entire
+Inspector
+panel
+content
+jumps
+1
+pixel
+up
+when
+the
+Toolbox
+is
+opened
+.
+*
+/
 height
 :
 calc
@@ -63,6 +205,34 @@ calc
 1px
 )
 ;
+/
+*
+This
+min
+-
+width
+avoids
+a
+visual
+glitch
+when
+moving
+the
+splitter
+quickly
+to
+the
+left
+.
+See
+bug
+1307408
+comment
+#
+12
+.
+*
+/
 min
 -
 width
@@ -80,6 +250,13 @@ direction
 column
 ;
 }
+/
+*
+Inspector
+Panel
+Splitter
+*
+/
 #
 inspector
 -
@@ -100,6 +277,18 @@ position
 fixed
 ;
 }
+/
+*
+Minimum
+dimensions
+for
+the
+Inspector
+splitter
+areas
+.
+*
+/
 #
 inspector
 -
@@ -136,6 +325,52 @@ x
 hidden
 ;
 }
+/
+*
+Set
+a
+minimum
+width
+of
+200px
+for
+tab
+content
+to
+avoid
+breaking
+the
+layout
+when
+resizing
+the
+sidebar
+tab
+to
+small
+width
+.
+If
+a
+specific
+panel
+supports
+smaller
+width
+this
+should
+be
+overridden
+on
+a
+panel
+-
+by
+-
+panel
+basis
+*
+/
 .
 inspector
 -
@@ -258,6 +493,18 @@ svg
 )
 ;
 }
+/
+*
+Flip
+the
+icon
+horizontally
+when
+in
+RTL
+mode
+*
+/
 #
 inspector
 -
@@ -321,6 +568,14 @@ padding
 3px
 ;
 }
+/
+*
+Add
+element
+toolbar
+button
+*
+/
 #
 inspector
 -
@@ -378,6 +633,13 @@ focus
 normal
 ;
 }
+/
+*
+Eyedropper
+toolbar
+button
+*
+/
 #
 inspector
 -
@@ -385,6 +647,23 @@ eyedropper
 -
 toggle
 {
+/
+*
+Required
+to
+display
+tooltip
+when
+eyedropper
+is
+disabled
+in
+non
+-
+HTML
+documents
+*
+/
 pointer
 -
 events
@@ -474,6 +753,32 @@ splitter
 color
 )
 ;
+/
+*
+Bug
+1262668
+-
+Use
+the
+same
+background
+as
+the
+body
+so
+the
+breadcrumbs
+toolbar
+doesn
+'
+t
+get
+mistaken
+as
+a
+splitter
+*
+/
 background
 -
 color
@@ -534,6 +839,39 @@ display
 :
 flex
 ;
+/
+*
+Break
+out
+of
+the
+XUL
+flexbox
+so
+the
+splitter
+can
+still
+shrink
+the
+markup
+view
+even
+if
+the
+contents
+of
+the
+breadcrumbs
+are
+wider
+than
+the
+new
+width
+.
+*
+/
 position
 :
 absolute
@@ -694,6 +1032,30 @@ right
 0
 ;
 }
+/
+*
+Override
+-
+moz
+-
+user
+-
+focus
+:
+ignore
+;
+from
+toolkit
+/
+content
+/
+minimal
+-
+xul
+.
+css
+*
+/
 .
 inspector
 -
@@ -711,6 +1073,12 @@ focus
 normal
 ;
 }
+/
+*
+Markup
+Box
+*
+/
 iframe
 {
 border
@@ -757,6 +1125,12 @@ width
 %
 ;
 }
+/
+*
+Extension
+Sidebar
+*
+/
 .
 inspector
 -
@@ -776,5 +1150,167 @@ overflow
 y
 :
 auto
+;
+}
+/
+*
+Used
+for
+both
+the
+computed
+view
+and
+the
+rule
+view
+to
+truncate
+extremely
+long
+base64
+URLs
+and
+other
+unexpectedly
+long
+text
+properties
+.
+*
+/
+.
+propertyvalue
+-
+long
+-
+text
+{
+/
+*
+Force
+inline
+-
+block
+to
+be
+able
+to
+set
+a
+max
+-
+width
+.
+*
+/
+display
+:
+inline
+-
+block
+;
+/
+*
+Arbitrary
+max
+-
+width
+this
+should
+allow
+the
+value
+to
+be
+inlined
+with
+the
+property
+name
+in
+very
+wide
+containers
+*
+/
+max
+-
+width
+:
+80
+%
+;
+/
+*
+Add
+ellipsis
+.
+*
+/
+overflow
+:
+hidden
+;
+text
+-
+overflow
+:
+ellipsis
+;
+/
+*
+Introducing
+display
+:
+inline
+-
+block
+;
+shifts
+the
+vertical
+alignment
+force
+to
+align
+it
+to
+the
+parent
+'
+s
+text
+*
+/
+vertical
+-
+align
+:
+text
+-
+top
+;
+/
+*
+Force
+the
+long
+text
+to
+be
+rendered
+on
+a
+single
+line
+.
+*
+/
+white
+-
+space
+:
+nowrap
 ;
 }
